--- a/main.css
+++ b/main.css
@@ -1,3 +1,17 @@
 body {
 	background: blanchedalmond;
 }
+#test{
+	display:flex;
+	flex-direction: row;
+	width:100%;
+	flex-wrap:wrap;
+
+}
+.movieDot{
+	margin-top:10px;
+	margin-left:10px;
+	margin-right:10px;
+	background:cornflowerblue;
+	width:280px;
+}
