--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body {
 }
 .movieDot{
 	margin:10px;
-	background:cornflowerblue;
+	background:linear-gradient(to right, red, blue);
 	width:280px;
 }
 
